FIX: form inputs gap on safari

--- a/src/components/Form/form.scss
+++ b/src/components/Form/form.scss
@@ -56,6 +56,10 @@
       margin-left: calc(0.8rem + 2px);
       color: $color-red;
       font-size: 12px;
+
+      &::before {
+        content: '\200B';
+      }
     }
   }
 }
